# project_ipynb_excell

./: pyproject.toml
project_ipynb_excell/: data_new.ipynb  etl.py  rename.py
